edit api changes

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -49,7 +49,8 @@
       <app-interaction-list-by-source></app-interaction-list-by-source>
     </div>
   </div>
-<div class="col-md-6 mt-2" *hasClaim="'DB_USERWISELIST'">
+<div class="col-md-6 mt-2" *hasClaim="'DB_USERSTATUSWISELIST'"> 
+  <!-- DB_USERWISELIST -->
     <div class="dashboard-table">
       <app-interaction-by-created-name></app-interaction-by-created-name>
     </div>
