--- a/src/app/user/bulk-user-upload/bulk-user-upload.component.html
+++ b/src/app/user/bulk-user-upload/bulk-user-upload.component.html
@@ -48,63 +48,66 @@
         <div class="">
             <div class="table-responsive">
                 <div class="table table-bordered table-hover tableDiv">
-                    <table mat-table [dataSource]="uploadedList" multiTemplateDataRows>
-                        <ng-container matColumnDef="interactionid">
-                            <th class="table-column-200" mat-header-cell *matHeaderCellDef >
-                                Interaction ID</th>
-                            <td class="table-column-200" mat-cell *matCellDef="let row">{{row.InteractionID}}
-                            </td>
-                        </ng-container>
-                        <ng-container matColumnDef="comments">
-                            <th class="table-column-400" mat-header-cell *matHeaderCellDef >
-                                ResolutionComments</th>
-                            <td class="table-column-400" mat-cell *matCellDef="let row">
-                                <div class="tdMaxHeight">{{row.ResolutionComments}}</div>
-                            </td>
-                        </ng-container>
-                        <ng-container matColumnDef="Disposition">
-                            <th class="table-column-200" mat-header-cell *matHeaderCellDef >
-                                Disposition</th>
-                            <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.Disposition}}
-                            </td>
-                        </ng-container>
-                        <ng-container matColumnDef="SubDisposition">
-                            <th class="table-column-200" mat-header-cell *matHeaderCellDef >Sub
-                                Disposition</th>
-                            <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.SubDisposition}}
-                            </td>
-                        </ng-container>
-                        <ng-container matColumnDef="ProblemID">
-                            <th class="table-column-200" mat-header-cell *matHeaderCellDef >
-                                Problem
-                                ID
-                            </th>
-                            <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.ProblemID}}
-                            </td>
-                        </ng-container>
-                        <ng-container matColumnDef="ResolveByUser">
-                            <th class="table-column-150" mat-header-cell *matHeaderCellDef >
-                                Resolve By User
-                            </th>
-                            <td class="table-column-150" mat-cell *matCellDef="let row"> <span
-                                    class="text-uppercase">{{row?.ResolveByUser}}</span></td>
-                        </ng-container>
-                        <ng-container matColumnDef="Team">
-                            <th class="table-column-200" mat-header-cell *matHeaderCellDef >Team
-                            </th>
-                            <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.Team}}
-                            </td>
-                        </ng-container>
-                        <tr *matNoDataRow>
-                            <td [attr.colspan]="displayedColumns.length">
-                                <span class="p-4 mt-4">
-                                    <b> {{'NO_DATA_FOUND' | translate}}</b>
-                                </span>
-                            </td>
-                        </tr>
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                    </table>
+                    <table mat-table [dir]="langDir" class="table table-bordered table-hover table-striped" [dataSource]="uploadedList"
+                    matSort matSortActive="email">
+                    <ng-container matColumnDef="email">
+                        <th class="table-column-300" mat-header-cell *matHeaderCellDef > {{'EMAIL' | translate}}
+                        </th>
+                        <td class="table-column-300" mat-cell *matCellDef="let user">
+                            <ng-container *ngIf="user.email">
+                                <a href="mailto:{{user.email}}">{{user.email}}</a>
+                            </ng-container>
+                        </td>
+                    </ng-container>
+                    <ng-container matColumnDef="bucketSize">
+                        <th class="table-column-150" mat-header-cell *matHeaderCellDef >Bucket Size
+                        </th>
+                        <td class="table-column-150" mat-cell *matCellDef="let user"> {{user.bucketSize || 0}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="userId">
+                        <th class="table-column-200" mat-header-cell *matHeaderCellDef >User Id
+                        </th>
+                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.userId || '--'}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="firstName">
+                        <th class="table-column-200" mat-header-cell *matHeaderCellDef > {{'FIRST_NAME' | translate}}
+                        </th>
+                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.firstName}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="role">
+                        <th class="table-column-200" mat-header-cell *matHeaderCellDef >User Role
+                        </th>
+                        <td class="table-column-200" mat-cell *matCellDef="let user"> <span class=""
+                                *ngFor="let role of user?.userRoles">{{role}}</span> </td>
+                    </ng-container>
+                    <ng-container matColumnDef="lastName">
+                        <th class="table-column-200" mat-header-cell *matHeaderCellDef > {{'LAST_NAME' | translate}}
+                        </th>
+                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.lastName}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="phoneNumber">
+                        <th class="table-column-200" mat-header-cell *matHeaderCellDef > {{'PHONE_NUMBER' |
+                            translate}} </th>
+                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.phoneNumber}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="isActive">
+                        <th class="table-column-150" mat-header-cell *matHeaderCellDef > {{'STATUS' | translate}}
+                        </th>
+                        <td class="table-column-150" mat-cell *matCellDef="let user">
+                            <span *ngIf="user.isActive" class="badge badge-success">{{'ACTIVE' | translate}}</span>
+                            <span *ngIf="!user.isActive" class="badge badge-warning">{{'INACTIVE' | translate}}</span>
+                        </td>
+                    </ng-container>
+                    <!-- <tr *matNoDataRow>
+                        <td colspan="9">
+                            <span class="p-4 mt-4">
+                                <b> {{'NO_DATA_FOUND' | translate}}</b>
+                            </span>
+                        </td>
+                    </tr> -->
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
                 </div>
             </div>
         </div>
