--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -91,7 +91,7 @@
           <a [routerLink]="['/interactions/assign-interaction']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
             class="nav-link">
             <i class="fas fa-plus-square nav-icon"></i>
-            <p>Mannual Assignment</p>
+            <p>Manual Assignment</p>
           </a>
         </li> 
       </ul>
