--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -40,7 +40,7 @@
                     <button type="button" (click)="onClear();" class="btn btn-danger btn-md button-margin"><i
                             class="fas fa-times-circle"></i>
                         Clear </button>
-                        <button type="button" (click)="downloadExcel()" class="btn btn-warning btn-md button-margin ml-2"><i
+                        <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-margin ml-2"><i
                             class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
                         </button>
                 </div>
@@ -145,7 +145,7 @@
         <ng-container matColumnDef="footer">
             <td mat-footer-cell colspan="8" *matFooterCellDef>
                 <mat-paginator [length]="customerResource.totalCount" [pageSize]="customerResource.pageSize"
-                    [pageSizeOptions]="[10, 20, 30,50]">
+                    [pageSizeOptions]="[10,2, 20, 30,50]">
                 </mat-paginator>
             </td>
         </ng-container>
