--- a/src/app/email-outbox/email-outbox-detail/email-outbox-detail.component.html
+++ b/src/app/email-outbox/email-outbox-detail/email-outbox-detail.component.html
@@ -9,25 +9,81 @@
 </div>
 
 <div class="row">
-    <div class="w-100" *ngFor="let data of emailDetail" >
-
-        <div class="col-md-12 my-2">
-            <h3>Subject :  {{data?.mailSubject}}</h3>
-        </div>
-        <div class="col-md-12 my-2">
-            <span>From :</span> <span>{{data?.mailFromName}}<{{data?.mailFromEmailId}}></span>
-            <p class="">To : {{data?.mailTo}}</p>
-        </div>
-        <div class="col-md-12 my-2">
-            <span>CC: {{data?.mailCC}}</span>
-        </div>
-        <div class="col-md-12">
-            <span>BCC: {{data?.mailBCC}}</span>
-        </div>
-        <div class="col-md-12">
-            <div class="MailMessage">    
-                <p [innerHTML]="senitizeContent(data?.mailMessage)"></p>
+    <form [formGroup]="emailForm">
+        <div class="row">
+          <div class="col-md-12 pb-1">
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text text-danger" id="toAddress">
+                  {{'From' | translate }}*
+                </span>
+              </div>
+              <input [readonly]="true" formControlName="from" type="text" class="form-control fromInput"
+                aria-label="To" aria-describedby="toAddress">
             </div>
+          </div>
+          <div class="col-md-12 pb-1">
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text text-danger" id="toAddress">
+                  {{'TO' | translate }}*
+                </span>
+              </div>
+              <input [readonly]="true" formControlName="toAddress" type="text" class="form-control"
+                placeholder="{{'COMMA_SEPARATED_EMAILS' | translate}}" aria-label="To" aria-describedby="toAddress">
+            </div>
+            <div *ngIf="emailForm.get('toAddress').touched && emailForm.get('toAddress').errors">
+              <div class="text-danger" *ngIf="emailForm.get('toAddress').errors?.required">
+                {{'TO_ADDRESS_IS_REQUIRED' | translate }}
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-md-12 pb-1">
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text text-danger" id="toAddress">
+                  {{'CC' | translate }}*
+                </span>
+              </div>
+              <input [readonly]="true"  formControlName="cCAddress" type="text" class="form-control"
+                placeholder="{{'COMMA_SEPARATED_EMAILS' | translate}}" aria-label="To" aria-describedby="toAddress">
+            </div>
+            <div *ngIf="emailForm.get('cCAddress').touched && emailForm.get('cCAddress').errors">
+              <div class="text-danger" *ngIf="emailForm.get('cCAddress').errors?.required">
+                {{'CC_ADDRESS_IS_REQUIRED' | translate }}
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12 pb-1">
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text text-danger" id="subject">
+                  {{'SUBJECT' | translate }} *
+                </span>
+              </div>
+              <input [readonly]="true" formControlName="subject" type="text" class="form-control" placeholder="{{'SUBJECT' | translate }}"
+                aria-label="To" aria-describedby="subject">
+            </div>
+            <div *ngIf="emailForm.get('subject').touched && emailForm.get('subject').errors">
+              <div class="text-danger" *ngIf="emailForm.get('subject').errors?.required">
+                {{'SUBJECT_IS_REQUIRED' | translate }}
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group">
+              <label class="font-weight-bold text-danger">
+                {{'BODY' | translate }} *
+              </label>
+              <angular-editor formControlName="body" [config]="editorConfig"></angular-editor>
+              <div *ngIf="emailForm.get('body').touched && emailForm.get('body').errors">
+                <div class="text-danger" *ngIf="emailForm.get('body').errors?.required">
+                  {{'BODY_IS_REQUIRED' | translate }}
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-    </div>
+      </form>
 </div>
