--- a/src/app/interaction-reports/reports187/reports187.component.html
+++ b/src/app/interaction-reports/reports187/reports187.component.html
@@ -42,8 +42,8 @@
                 <i class="fas fa-eraser"></i>
                 {{'CLEAR' | translate}}
             </button>
-            <button type="button" (click)="onDownloadReport()" class="btn btn-warning btn-md button-margin ml-2"><i
-                    class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
+            <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-margin ml-2"><i
+                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
             </button>
         </div>
     </div>
@@ -139,7 +139,7 @@
             </ng-container>
             <ng-container matColumnDef="createdat">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.createdAt|| row.createdAt}}
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.created| date:'yyyy-MM-dd hh:mm a'}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="footer">
