--- a/src/app/inventory/interaction-attachments-list/interaction-attachments-list.component.html
+++ b/src/app/inventory/interaction-attachments-list/interaction-attachments-list.component.html
@@ -5,7 +5,59 @@
     <div class="row align-items-center justify-content-between">
         <div class="col-md-auto col-sm-auto col">
             <div class="content-header">
-                <h1>ATTACHMENTS LIST</h1>
+                <h1>GRP & CHAT ATTACHMENTS</h1>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="loading-shade" *ngIf="isLoading">
+    <mat-spinner></mat-spinner>
+</div>
+<div class="table-responsive" *ngIf="documentList?.length && !isLoading">
+    <table [dir]="langDir" mat-table [dataSource]="documentList" multiTemplateDataRows
+        class="table table-bordered table-hover">
+    
+        <ng-container matColumnDef="transactionNo">
+            <th mat-header-cell *matHeaderCellDef>Interaction Id </th>
+            <td mat-cell *matCellDef="let element"> {{element?.relatedToName}} </td>
+        </ng-container>
+        <ng-container matColumnDef="fileName">
+            <th mat-header-cell *matHeaderCellDef>File Name </th>
+            <td mat-cell *matCellDef="let element"> <span class="downloadFile" (click)="downloadFile(element)">{{element.attchmntFileName}}</span> </td>
+        </ng-container>
+        <ng-container matColumnDef="fileType">
+            <th mat-header-cell *matHeaderCellDef>File Type </th>
+            <td mat-cell *matCellDef="let element"> {{element.attchmntContentType}} </td>
+        </ng-container>
+        <ng-container matColumnDef="contentSubtype">
+            <th mat-header-cell *matHeaderCellDef>Content Sub Type </th>
+            <td mat-cell *matCellDef="let element"> {{element.attchmntContentSubtype}} </td>
+        </ng-container>
+        <ng-container matColumnDef="attchmntFilePath">
+            <th mat-header-cell *matHeaderCellDef>File Path </th>
+            <td mat-cell *matCellDef="let element"> {{element.attchmntFilePath}} </td>
+        </ng-container>
+        <ng-container matColumnDef="createdByName">
+            <th mat-header-cell *matHeaderCellDef>Upload By</th>
+            <td mat-cell *matCellDef="let element"> {{element.createdByName}} </td>
+        </ng-container>
+        <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef>Upload Date</th>
+            <td mat-cell *matCellDef="let element"> {{element.createdDate | date:'yyyy-MM-dd hh:mm:ss a' :'UTC' }} </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay;sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+    </table>
+</div>
+
+<div class="noData" *ngIf="!documentList?.length && !isLoading">
+    no Attachment Found
+</div>
+<div class="page-header-main">
+    <div class="row align-items-center justify-content-between">
+        <div class="col-md-auto col-sm-auto col">
+            <div class="content-header">
+                <h1>EMAIL ATTACHMENTS</h1>
             </div>
         </div>
     </div>
