--- a/src/app/queue/queue/queue.component.html
+++ b/src/app/queue/queue/queue.component.html
@@ -10,8 +10,8 @@
                 <i class="fas fa-plus"></i>
                 Add Team
             </button>
-            <button type="button" (click)="downloadExcel()" class="btn btn-warning btn-md button-margin ml-2"><i
-                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
+            <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-sm button-margin ml-2"><i
+                class="fas fa-download"></i> {{'DOWNLOAD TEAM LIST' | translate}}
             </button>
         </div>
     </div>
