--- a/src/app/inventory/interaction-attachments-list/interaction-attachments-list.component.html
+++ b/src/app/inventory/interaction-attachments-list/interaction-attachments-list.component.html
@@ -65,17 +65,17 @@
 <div class="loading-shade" *ngIf="isLoading">
     <mat-spinner></mat-spinner>
 </div>
-<div class="table-responsive" *ngIf="documentList?.length && !isLoading">
-    <table [dir]="langDir" mat-table [dataSource]="documentList" multiTemplateDataRows
+<div class="table-responsive" *ngIf="emailDocumentList?.length && !isLoading">
+    <table [dir]="langDir" mat-table [dataSource]="emailDocumentList" multiTemplateDataRows
         class="table table-bordered table-hover">
     
         <ng-container matColumnDef="transactionNo">
             <th mat-header-cell *matHeaderCellDef>Interaction Id </th>
-            <td mat-cell *matCellDef="let element"> {{element?.relatedToName}} </td>
+            <td mat-cell *matCellDef="let element"> {{element?.intercationID}} </td>
         </ng-container>
         <ng-container matColumnDef="fileName">
             <th mat-header-cell *matHeaderCellDef>File Name </th>
-            <td mat-cell *matCellDef="let element"> <span class="downloadFile" (click)="downloadFile(element)">{{element.attchmntFileName}}</span> </td>
+            <td mat-cell *matCellDef="let element"> <span class="downloadFile" (click)="downloadEmailFile(element)">{{element.attchmntFileName}}</span> </td>
         </ng-container>
         <ng-container matColumnDef="fileType">
             <th mat-header-cell *matHeaderCellDef>File Type </th>
@@ -91,17 +91,17 @@
         </ng-container>
         <ng-container matColumnDef="createdByName">
             <th mat-header-cell *matHeaderCellDef>Upload By</th>
-            <td mat-cell *matCellDef="let element"> {{element.createdByName}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.createdBy}} </td>
         </ng-container>
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef>Upload Date</th>
             <td mat-cell *matCellDef="let element"> {{element.createdDate | date:'yyyy-MM-dd hh:mm:ss a' :'UTC' }} </td>
         </ng-container>
-        <tr mat-header-row *matHeaderRowDef="columnsToDisplay;sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay2;sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnsToDisplay2;"></tr>
     </table>
 </div>
 
-<div class="noData" *ngIf="!documentList?.length && !isLoading">
+<div class="noData" *ngIf="!emailDocumentList?.length && !isLoading">
     no Attachment Found
 </div>
