--- a/src/app/interaction-reports/interaction-report-list/interaction-report-list.component.scss
+++ b/src/app/interaction-reports/interaction-report-list/interaction-report-list.component.scss
@@ -1,3 +1,40 @@
 .button-margin {
     margin-top: 20px;
   }
+
+  .input-container {
+    display: flex;
+    align-items: center;
+  }
+  .input-prefix {
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-right: none;
+    padding: 6.15px 0px 6.25px 10.5px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    font-size: 16px;
+    color: #5e656b;
+  }
+  
+  // input[readonly] {
+  //   border: 1px solid #ccc;
+  //   border-left: none;
+  //   padding: 7.5px 0px 7.5px 10.5px;
+  //   border-top-right-radius: 4px;
+  //   border-bottom-right-radius: 4px;
+  //   margin: 0;
+  //   flex: 1;
+  // }
+  
+  .searchPrefix{
+    border-left: none !important;
+    border-bottom-left-radius: 0px;
+    border-top-left-radius: 0px;
+    padding: .375rem .75rem .375rem 0rem;
+  }
+  
+  .form-control:focus {
+    border-color: #ced4da !important;
+    box-shadow: none !important;
+  }
