--- a/src/app/inventory/interaction-notes/interaction-notes.component.html
+++ b/src/app/inventory/interaction-notes/interaction-notes.component.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12">
+        <!-- <div class="col-md-12">
             <div class="form-group w-50">
                 <label class="text-danger">Next Status Time *</label>
                 <input class="form-control" (click)="nextStatusTime.open()" [readonly]="true" [min]="currentDate"
@@ -44,7 +44,7 @@
                 </div>
                 <owl-date-time #nextStatusTime></owl-date-time>
             </div>
-        </div>
+        </div> -->
     </div>
 </form>
 <div class="page-header-main headerBackground">
