--- a/src/app/inventory/add-inventory/add-inventory.component.html
+++ b/src/app/inventory/add-inventory/add-inventory.component.html
@@ -2,7 +2,7 @@
     <mat-tab label="General">
         <app-inventory-properties *ngIf="isEdit && tabIndex==0 " (interactionDetail)="getInteractionDetail($event)" (userId)="getUserId($event)" [userData]="userData" [id]="interationId" ></app-inventory-properties>
         <app-add-interactions *ngIf="!isEdit" [userData]="userData"></app-add-interactions></mat-tab>
-        <mat-tab *ngIf="isEdit" label="Email">email</mat-tab>
+        <mat-tab *ngIf="isEdit" label="Email"><app-interaction-email *ngIf="tabIndex==1" [id]="interationId" ></app-interaction-email></mat-tab>
         <mat-tab *ngIf="isEdit" label="Attachments"><app-interaction-attachments-list *ngIf="tabIndex==2" [id]="interationId"></app-interaction-attachments-list></mat-tab>
         <mat-tab *ngIf="isEdit" label="Comments"><app-interaction-notes *ngIf="tabIndex==3" [id]="interationId" [InteractionDetail]="InteractionDetail"    ></app-interaction-notes> </mat-tab>
         <mat-tab *ngIf="isEdit" label="History"><app-interaction-history *ngIf="tabIndex==4"  [id]="interationId"></app-interaction-history></mat-tab>
