--- a/src/app/inventory/add-note-dialog/add-note-dialog.component.html
+++ b/src/app/inventory/add-note-dialog/add-note-dialog.component.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-12">
+            <!-- <div class="col-md-12">
                 <div class="form-group">
                     <mat-label>Next Status Time *</mat-label>
                     <input class="form-control" (click)="nextStatusTime.open()" [readonly]="true" [min]="currentDate" id="nextStatusTime" formControlName="nextStatusTime"
@@ -39,7 +39,7 @@
                     </div>
                     <owl-date-time #nextStatusTime></owl-date-time>
                 </div>
-            </div>
+            </div> -->
         </div>
     </form>
 </mat-dialog-content>
