--- a/src/app/inventory/send-email-dialog/send-email-dialog.component.html
+++ b/src/app/inventory/send-email-dialog/send-email-dialog.component.html
@@ -11,6 +11,19 @@
   <mat-spinner></mat-spinner>
 </div>
 <mat-dialog-content class="main">
+  <div class="col-md-12 col-sm-12">
+    <div class="form-group">
+      <mat-label [dir]="langDir">
+        {{'SELECT_EMAIL_TAMPLATE' | translate }}
+      </mat-label>
+      <mat-select [dir]="langDir" placeholder="{{'SELECT_EMAIL_TAMPLATE' | translate}}" class="form-control"
+        name="selectedEmailTamplate" [(ngModel)]="selectedEmailTamplate" (selectionChange)="onTempateChange()">
+        <mat-option *ngFor="let tamplate of emailTamplates" [value]="tamplate">
+          {{tamplate.name}}
+        </mat-option>
+      </mat-select>
+    </div>
+  </div>
   <form [formGroup]="emailForm">
     <div class="row">
       <div class="col-md-12 pb-1">
@@ -86,62 +99,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="col-md-12" formArrayName="parameters">
-        <div class="row" *ngIf="parameters.controls.length>0">
-          <div class="col-md-6 font-weight-bold">
-            {{'PARAMETER_NAME' | translate }}
-          </div>
-          <div class="col-md-6 font-weight-bold text-danger">
-            {{'PARAMETER_VALUE' | translate }} *
-          </div>
-        </div>
-        <div *ngFor="let param of parameters.controls; let i=index" class="row mt-1">
-          <ng-container [formGroupName]="i">
-            <div class="col-md-6">
-              <input readonly class="form-control" type="text" formControlName="parameter">
-            </div>
-            <div class="col-md-6">
-              <input (focusout)="setParameterValue()" class="form-control" type="text" formControlName="value">
-              <div *ngIf="param.get('value').touched && param.get('value').errors">
-                <div class="text-danger" *ngIf="param.get('value').errors?.required">
-                  {{'PARAMETER_VALUE_IS_REQUIRED' | translate }}
-                </div>
-              </div>
-            </div>
-          </ng-container>
-        </div>
-      </div>
-      <div class="col-md-12 mt-2">
-        <div class="form-group">
-          <label class="font-weight-bold"> {{'ATTACHMENTS' | translate}} </label>
-          <div class="dropzone" appDragDrop (onFileDropped)="onFileDropped($event)">
-            <input type="file" #fileDropRef id="fileDropRef" multiple (change)="fileBrowseHandler($event.target.files)" />
-            <i class="text-danger fas fa-download fa-lg" aria-hidden="true"></i>
-            <h3>{{'DRAG_AND_DROP_FILE_HERE' | translate}}</h3>
-            <h3>{{'OR' | translate}}</h3>
-            <label for="fileDropRef">{{'BROWSE_FOR_FILE' | translate}}</label>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-12 mt-2">
-        <ul class="list-group">
-          <li class="list-group-item d-flex justify-content-between align-items-center"
-            *ngFor="let file of files; let i = index">
-            <h4 class="name">
-              {{ file?.name }} -- {{ formatBytes(file?.size) }}
-            </h4>
-            <span class="badge badge-pill">
-              <button class="btn btn-danger" (click)="onDeleteFile(i)">
-                <i class="text-light fas fa-trash"></i>
-              </button>
-            </span>
-            <div class="loading-shade" *ngIf="file?.progress">
-              <mat-spinner></mat-spinner>
-            </div>
-          </li>
-        </ul>
-      </div> -->
-
     </div>
   </form>
 </mat-dialog-content>
