bulk assign ment api bind

--- a/src/app/customer/customer-interactions/customer-interactions.component.html
+++ b/src/app/customer/customer-interactions/customer-interactions.component.html
@@ -53,7 +53,7 @@
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.contactName}} </td>
             </ng-container>
             <ng-container matColumnDef="createdteam">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Created Team
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Team
                 </th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.teamName}} </td>
             </ng-container>
