--- a/src/app/inventory/add-interactions/add-interactions.component.html
+++ b/src/app/inventory/add-interactions/add-interactions.component.html
@@ -169,7 +169,7 @@
                     *ngIf="addInventoryForm.get('teamId').touched && addInventoryForm.get('teamId').errors?.required"
                     class="text-danger">
                     <!-- {{'PLEASE_SELECT_COUNTRY' | translate}} -->
-                    Please select created team.
+                    Please select team.
                 </mat-error>
             </div>
         </div>
