--- a/src/app/interaction-reports/interaction-report-list/interaction-report-list.component.html
+++ b/src/app/interaction-reports/interaction-report-list/interaction-report-list.component.html
@@ -162,7 +162,7 @@
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.contactName || row.contactName}} </td>
             </ng-container>
             <ng-container matColumnDef="createdteam">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Created Team
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Team
                 </th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.team || row?.teamName}} </td>
             </ng-container>
