--- a/src/app/inventory/interaction-assignment/interaction-assignment.component.html
+++ b/src/app/inventory/interaction-assignment/interaction-assignment.component.html
@@ -1,6 +1,9 @@
 <div class="loading-shade" *ngIf="dataSource.loading$ | async">
     <mat-spinner></mat-spinner>
 </div>
+<div class="loading-shade" *ngIf="isLoading">
+    <mat-spinner></mat-spinner>
+</div>
 
 <div class="mb-3">
     <div class="row">
@@ -11,7 +14,7 @@
         </div>
         <div class="col-md-2">
             <div class="form-group">
-                <label for="fromDate">{{'FROM_DATE' | translate}} </label>
+                <mat-label for="fromDate">{{'FROM_DATE' | translate}} </mat-label>
                 <input class="form-control" [max]="currentDate" [(ngModel)]="fromDate" [owlDateTimeTrigger]="fromDate1"
                     [owlDateTime]="fromDate1" placeholder="{{'FROM_DATE' | translate}}">
                 <owl-date-time [pickerType]="'calendar'" #fromDate1></owl-date-time>
@@ -19,7 +22,7 @@
         </div>
         <div class="col-md-2">
             <div class="form-group">
-                <label for="toDate">{{'TO_DATE' | translate}} </label>
+                <mat-label for="toDate">{{'TO_DATE' | translate}} </mat-label>
                 <input class="form-control" id="toDate1" [max]="currentDate" [(ngModel)]="toDate"
                     [owlDateTimeTrigger]="toDate1" [owlDateTime]="toDate1" placeholder="{{'TO_DATE' | translate}}">
                 <owl-date-time [pickerType]="'calendar'" #toDate1></owl-date-time>
@@ -32,7 +35,7 @@
                     id="search">
             </div>
         </div> -->
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="form-group">
                 <mat-label> Status </mat-label>
                 <mat-select [(ngModel)]="selectedStatus" (selectionChange)="onStatusChange($event)"
@@ -50,7 +53,7 @@
                 </mat-select>
             </div>
         </div>
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
             <div class="form-group">
                 <mat-label> Category </mat-label>
                 <mat-select [(ngModel)]="selectedCategory"
@@ -82,7 +85,7 @@
 
                 </mat-select>
             </div>
-        </div>
+        </div> -->
 
         <!-- <div class="col-md-3 d-none">
             <div class="form-group">
@@ -92,7 +95,7 @@
                 </mat-select>
             </div>
         </div> -->
-        <div class="col-md-3">
+        <div class="col-md-2">
             <button type="button" (click)="searchList()" class="btn btn-success btn-md mx-2 button-margin"><i
                     class="fas fa-save"></i>
                 Search</button>
@@ -116,27 +119,28 @@
         <div class="form-group">
             <mat-label>Assign Team </mat-label>
             <mat-select [(ngModel)]="selectedTeam" (selectionChange)="onAssignTeamChange($event)" placeholder="Select team" class="form-control">
-                <mat-option [value]="team" *ngFor="let team of teamList">{{team?.name}}</mat-option>
+                <mat-option [value]="team?.assignTeamId" *ngFor="let team of teamList">{{team?.assignTeamName}}</mat-option>
             </mat-select>
         </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-6">
         <div class="form-group">
             <mat-label>Assign To </mat-label>
-            <mat-select [(ngModel)]="selectedAssignTeam" placeholder="Select type"
+            <mat-select [(ngModel)]="selectedAssignMember" placeholder="Select member name"
                 class="form-control">
-                <mat-option [value]="type?.id" *ngFor="let type of AssignToTeamList">{{type?.name}}</mat-option>
+                <mat-option [value]="type?.userId" *ngFor="let type of membersList">{{getMembersName(type?.userId)}}</mat-option>
             </mat-select>
         </div>
     </div>
     <div class="col-md-3">
-        <button type="button" (click)="searchList()" class="btn btn-success btn-md mx-2 button-margin"><i
+        <button type="button" (click)="bulkAssign()" class="btn btn-success btn-md mx-2 button-margin"><i
                 class="fas fa-save"></i>
             Bulk Assign</button>
         <button type="button" (click)="onClear();" class="btn btn-danger btn-md button-margin"><i
                 class="fas fa-times-circle"></i>
             Clear </button>
     </div>
+    <!-- {{interactionIds | json}} -->
 </div>
 <div class="page-header-main headerBackground">
     <div class="row align-items-center justify-content-between">
@@ -152,9 +156,11 @@
         <table [dir]="langDir" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows
             matSortActive="productName">
             <ng-container matColumnDef="action">
-                <th class="table-column-100" mat-header-cell *matHeaderCellDef>
-                    <mat-checkbox color="primary" name="enabled" (change)="onSelectAll($event)">Selcet All</mat-checkbox>
+                <!-- <th class="table-column-100" mat-header-cell *matHeaderCellDef="let data">
+                    <mat-checkbox color="primary" name="enabled"  (change)="onSelectAll($event,dataSource)">Selcet All</mat-checkbox>
                  
+                </th> -->
+                <th class="table-column-100" mat-header-cell *matHeaderCellDef>Action              
                 </th>
                 <td class="table-column-100 text-center pad-12" mat-cell *matCellDef="let element">
                     <mat-checkbox color="primary" name="enabled" (change)="onChange(element?.id)"></mat-checkbox>
@@ -166,7 +172,7 @@
                 <!-- <td class="table-column-200" mat-cell *matCellDef="let row"> {{row }} </td> -->
             </ng-container>
             <ng-container matColumnDef="interactiontype">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction Type</th>
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
                 <td class="table-column-200" [ngClass]="row?.ticketType=='FCR'?'fcr':'ticket-closed'" mat-cell
                     *matCellDef="let row"> {{row.ticketType}} </td>
             </ng-container>
@@ -179,13 +185,13 @@
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.contactName}} </td>
             </ng-container>
             <ng-container matColumnDef="createdteam">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Created Team
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Team
                 </th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.teamName}} </td>
             </ng-container>
             <ng-container matColumnDef="status">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Interaction Status
+                    Status
                 </th>
                 <td class="table-column-150"
                     [ngClass]="row?.statusName=='CLOSED'?'closed':(row?.statusName=='OPEN' ||  row?.statusName=='Open' ?'open':row?.statusName=='PENDING'?'pending':'resolved')"
@@ -193,7 +199,7 @@
                 <!-- <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.statusName}}</td> -->
             </ng-container>
             <ng-container matColumnDef="substatus">
-                <th class="table-column-350" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction Sub status
+                <th class="table-column-350" mat-header-cell *matHeaderCellDef mat-sort-header>Sub Status
                 </th>
                 <td class="table-column-350" mat-cell *matCellDef="let row"> {{row?.subcategoryName}}
                 </td>
