--- a/src/app/inventory/interaction-attachments-list/interaction-attachments-list.component.html
+++ b/src/app/inventory/interaction-attachments-list/interaction-attachments-list.component.html
@@ -68,11 +68,11 @@
 <div class="table-responsive" *ngIf="emailDocumentList?.length && !isLoading">
     <table [dir]="langDir" mat-table [dataSource]="emailDocumentList" multiTemplateDataRows
         class="table table-bordered table-hover">
-    
+<!--     
         <ng-container matColumnDef="transactionNo">
             <th mat-header-cell *matHeaderCellDef>Interaction Id </th>
             <td mat-cell *matCellDef="let element"> {{element?.intercationID}} </td>
-        </ng-container>
+        </ng-container> -->
         <ng-container matColumnDef="fileName">
             <th mat-header-cell *matHeaderCellDef>File Name </th>
             <td mat-cell *matCellDef="let element"> <span class="downloadFile" (click)="downloadEmailFile(element)">{{element.attchmntFileName}}</span> </td>
