--- a/src/app/inventory/interaction-email/interaction-email.component.html
+++ b/src/app/inventory/interaction-email/interaction-email.component.html
@@ -7,6 +7,7 @@
         </div>
     </div>
 </div>
+<!-- <pre>{{emailList[0] | json}}</pre> -->
 
 <div class="table-responsive">
     <table [dir]="langDir" mat-table [dataSource]="emailList" multiTemplateDataRows
@@ -26,6 +27,22 @@
             <th mat-header-cell *matHeaderCellDef>Email Subject </th>
             <td mat-cell *matCellDef="let element"> {{element.mailSubject}} </td>
         </ng-container>
+        <ng-container matColumnDef="date">
+            <th class="table-column-200" mat-header-cell *matHeaderCellDef>Email Date</th>
+            <td class="table-column-200" mat-cell *matCellDef="let element"><div>{{element.createdDate |date:'yyy-MM-dd hh:mm a':'UTC' }} </div> </td>
+        </ng-container>
+        <ng-container matColumnDef="sentTime">
+            <th class="table-column-200" mat-header-cell *matHeaderCellDef>Email Sent Time </th>
+            <td class="table-column-200" mat-cell *matCellDef="let element"> {{element.mailSentTime | date :'yyyy-MM-dd hh:mm a' :'UTC'}} </td>
+        </ng-container>
+        <ng-container matColumnDef="fromMailId">
+            <th mat-header-cell *matHeaderCellDef>Email From </th>
+            <td mat-cell *matCellDef="let element"> {{element.mailFromEmailId}} </td>
+        </ng-container>
+        <ng-container matColumnDef="to">
+            <th class="table-column-200" mat-header-cell *matHeaderCellDef>Email To </th>
+            <td class="table-column-200" mat-cell *matCellDef="let element">Email send to {{element.mailTo}} </td>
+        </ng-container>
         <ng-container matColumnDef="expandedDetail">
             <td mat-cell *matCellDef="let categoryObject" [attr.colspan]="columnsToDisplay.length">
                 <div class="example-element-detail"
@@ -40,17 +57,21 @@
                         </div> -->
                         <table [dir]="langDir" mat-table [dataSource]="emailDetail" multiTemplateDataRows class="table">
                             <ng-container matColumnDef="name">
-                                <th class="w-75" mat-header-cell *matHeaderCellDef>Email Message</th>
-                                <td class="w-75" mat-cell *matCellDef="let element"><div [innerHTML]="element.mailMessage"  > </div> </td>
-                            </ng-container>
-                        
-                            <ng-container matColumnDef="date">
-                                <th class="table-column-200" mat-header-cell *matHeaderCellDef>Email Sent Date</th>
-                                <td class="table-column-200" mat-cell *matCellDef="let element"><div>{{element.mailSentTime |date:'yyy-MM-dd hh:mm a':'UTC' }} </div> </td>
+                                <th class="w-100" mat-header-cell *matHeaderCellDef>Email Message</th>
+                                <td class="w-100" mat-cell *matCellDef="let element"><div [innerHTML]="element.mailMessageHtml"  > </div> </td>
                             </ng-container>
                             <tr mat-header-row *matHeaderRowDef="emailDetailColumnToDisplay;sticky: true"></tr>
                             <tr mat-row *matRowDef="let row; columns: emailDetailColumnToDisplay;"></tr>
                         </table>
+                    <!-- <div class="">
+                        <div [innerHTML]="emailDetail[0]?.mailMessageHtml" ]></div>
+                        <div class="">
+                            <p>Sent Time : {{emailDetail[0]?.mailSentTime | date :'yyyy-MM-dd hh:mm a' :'UTC'}}</p>
+                            <p>Email send to {{element.mailTo}}</p>
+                            <p>Email From : {{element.mailFromEmailId}} 
+                            </p>
+                        </div>
+                    </div>     -->
                     </div>
                 </div>
             </td>
