--- a/src/app/inventory/l0-email/l0-email.component.html
+++ b/src/app/inventory/l0-email/l0-email.component.html
@@ -133,7 +133,7 @@
                 <!-- <td class="table-column-200" mat-cell *matCellDef="let row"> {{row }} </td> -->
             </ng-container>
             <ng-container matColumnDef="interactiontype">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction Type</th>
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
                 <td class="table-column-200" [ngClass]="row?.ticketType=='FCR'?'fcr':'ticket-closed'" mat-cell *matCellDef="let row"> {{row.ticketType}} </td>
             </ng-container>
             <ng-container matColumnDef="assignto">
@@ -145,19 +145,19 @@
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.contactName}} </td>
             </ng-container>
             <ng-container matColumnDef="createdteam">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Created	Team
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>	Team
                 </th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.teamName}} </td>
             </ng-container>
             <ng-container matColumnDef="status">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Interaction Status
+                    Status
                 </th>
                 <!-- <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.statusName}}</td> -->
                 <td class="table-column-150" [ngClass]="row?.statusName=='CLOSED'?'closed':(row?.statusName=='OPEN'||row?.statusName=='Open'?'open':row?.statusName=='PENDING'?'pending':'resolved')" mat-cell *matCellDef="let row"> <span class="text-uppercase">{{row?.statusName}}</span></td>
             </ng-container>
             <ng-container matColumnDef="substatus">
-                <th class="table-column-350" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction Sub status</th>
+                <th class="table-column-350" mat-header-cell *matHeaderCellDef mat-sort-header>Sub status</th>
                 <td class="table-column-350" mat-cell *matCellDef="let row"> {{row?.subcategoryName}}
                 </td>
             </ng-container>
@@ -172,8 +172,8 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="problemreported">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header> Problem Reported</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.problemReported}}
+                <th class="table-column-400" mat-header-cell *matHeaderCellDef mat-sort-header> Problem Reported</th>
+                <td class="table-column-400" mat-cell *matCellDef="let row"> <div class="ProblemDiv">{{row.problemReported}}</div>
                 </td>
             </ng-container>
             <ng-container matColumnDef="docketno">
@@ -192,8 +192,8 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="createdat">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.lastResolvedAt | date:'dd-MM-yyyy'}}
+                <th class="table-column-250" mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
+                <td class="table-column-250" mat-cell *matCellDef="let row"> {{row.createDateTime | date:'yyyy-MM-dd hh:mm:ss a':'UTC'}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="footer">
