--- a/src/app/user/bulk-user-upload/bulk-user-upload.component.html
+++ b/src/app/user/bulk-user-upload/bulk-user-upload.component.html
@@ -19,23 +19,24 @@
             <input (change)="onFileSelect($event)" #fileInput name="xlxx file" type="file">
         </div>
     </div>
-    <div class="col-md-7 text-center">
+    <div class="col-md-7">
         <div class="fileUploadDiv">
             <button (click)="previewUploadedFile()" class="btn blue-btn btn-sm m-right-10"> Preview</button>
-            <button class="btn blue-btn btn-sm m-right-10"> Download Template</button>
-           
-        </div>
-    </div>
-    <div class="col-md-4 my-3">
-        <div class="mb-3 text-right">
-            <button type="button" (click)="uploadFile()" class="btn blue-btn btn-sm m-right-10">Click For
+            <button type="button" *hasClaim="'USR_ADD_BULK_USER'" (click)="uploadFile()" class="btn blue-btn btn-sm m-right-10">Click For
                 Updload Records
-               </button>
+            </button>
             <button type="button" (click)="resetFiles()" class="btn blue-btn btn-sm m-right-10 mx-3">Reset</button>
+            <a href="../../../assets/UserUpload.xlsx" download><button class="btn blue-btn btn-sm m-right-10"> Download Template</button></a>
         </div>
     </div>
+<div class="col-12 my-1" *ngIf="responceData">
+   <span class="mt-1">Total Records = {{responceData?.totalRecords}}, </span>
+   <span class="mt-1">Duplicate Records = {{responceData?.duplicateRecords}}, </span>
+   <span class="mt-1">Fail Records = {{responceData?.failRecords}}, </span>
+   <span class="mt-1">Update Records = {{responceData?.updateRecords}}</span>
+</div>
 <!-- *ngIf="previewFile" -->
-    <div class="w-100">
+    <div class="w-100 mt-3">
         <div class="page-header-main headerBackground">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md-auto col-sm-auto col">
@@ -54,50 +55,45 @@
                         <th class="table-column-300" mat-header-cell *matHeaderCellDef > {{'EMAIL' | translate}}
                         </th>
                         <td class="table-column-300" mat-cell *matCellDef="let user">
-                            <ng-container *ngIf="user.email">
-                                <a href="mailto:{{user.email}}">{{user.email}}</a>
+                            <ng-container *ngIf="user.Email">
+                                <a href="mailto:{{user.Email}}">{{user.Email}}</a>
                             </ng-container>
                         </td>
-                    </ng-container>
-                    <ng-container matColumnDef="bucketSize">
-                        <th class="table-column-150" mat-header-cell *matHeaderCellDef >Bucket Size
-                        </th>
-                        <td class="table-column-150" mat-cell *matCellDef="let user"> {{user.bucketSize || 0}} </td>
                     </ng-container>
                     <ng-container matColumnDef="userId">
                         <th class="table-column-200" mat-header-cell *matHeaderCellDef >User Id
                         </th>
-                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.userId || '--'}} </td>
+                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.UserName || '--'}} </td>
                     </ng-container>
                     <ng-container matColumnDef="firstName">
                         <th class="table-column-200" mat-header-cell *matHeaderCellDef > {{'FIRST_NAME' | translate}}
                         </th>
-                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.firstName}} </td>
+                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.FirstName}} </td>
                     </ng-container>
                     <ng-container matColumnDef="role">
                         <th class="table-column-200" mat-header-cell *matHeaderCellDef >User Role
                         </th>
-                        <td class="table-column-200" mat-cell *matCellDef="let user"> <span class=""
-                                *ngFor="let role of user?.userRoles">{{role}}</span> </td>
+                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user?.RoleName}}</td>
                     </ng-container>
                     <ng-container matColumnDef="lastName">
                         <th class="table-column-200" mat-header-cell *matHeaderCellDef > {{'LAST_NAME' | translate}}
                         </th>
-                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.lastName}} </td>
+                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.LastName}} </td>
                     </ng-container>
                     <ng-container matColumnDef="phoneNumber">
                         <th class="table-column-200" mat-header-cell *matHeaderCellDef > {{'PHONE_NUMBER' |
                             translate}} </th>
-                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.phoneNumber}} </td>
+                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.PhoneNumber}} </td>
                     </ng-container>
-                    <ng-container matColumnDef="isActive">
-                        <th class="table-column-150" mat-header-cell *matHeaderCellDef > {{'STATUS' | translate}}
-                        </th>
-                        <td class="table-column-150" mat-cell *matCellDef="let user">
-                            <span *ngIf="user.isActive" class="badge badge-success">{{'ACTIVE' | translate}}</span>
-                            <span *ngIf="!user.isActive" class="badge badge-warning">{{'INACTIVE' | translate}}</span>
-                        </td>
+                    <ng-container matColumnDef="MaxAssignInteraction">
+                        <th class="table-column-200" mat-header-cell *matHeaderCellDef > Max Interactions</th>
+                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.MaxAssignInteraction}} </td>
                     </ng-container>
+                    <ng-container matColumnDef="password">
+                        <th class="table-column-200" mat-header-cell *matHeaderCellDef >Password</th>
+                        <td class="table-column-200" mat-cell *matCellDef="let user"> {{user.Password}} </td>
+                    </ng-container>
+                    
                     <!-- <tr *matNoDataRow>
                         <td colspan="9">
                             <span class="p-4 mt-4">
